# SPECFEMPP-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  job_script_cpu.sh  job_script_gpu.sh  pyproject.toml
forward_simulations/: .gitignore  README.md  Snakefile  config.yaml  results-benchmark_1-cpu.csv  results-benchmark_1-gpu.csv  results-benchmark_2-cpu.csv  results-benchmark_2-gpu.csv  results-benchmark_3-cpu.csv  results-benchmark_3-gpu.csv  results.csv  specfem2d.smk  specfempp.smk  workflow.smk
forward_simulations/templates/benchmark_1/SPECFEM2D/: Par_file  SOURCE
forward_simulations/templates/benchmark_2/SPECFEM2D/: Par_file
forward_simulations/templates/benchmark_2/SPECFEMPP/: Par_File  specfem_config.yaml.in
forward_simulations/templates/benchmark_3/SPECFEM2D/: Par_file
forward_simulations/templates/benchmark_3/SPECFEMPP/: Par_File  sources.yaml.in  specfem_config.yaml.in
scripts/: plot.py
